User story 1 passes

--- a/app/views/welcome/show.html.erb
+++ b/app/views/welcome/show.html.erb
@@ -1,4 +1,6 @@
 <h1>Examples for using '<%= @word %>'</h1>
 
-<%= @word_facade.regions %>
-<%= @word_facade.sentences %>
+<h3>Candian Sentence Example</h3>
+<%= @word_facade.canadian_sentences %>
+<h3>British Sentence Example</h3>
+<%= @word_facade.british_sentences %>
